cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(INTERCONNECT_VIZ)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
find_package(PCL 1.3 REQUIRED COMPONENTS common io segmentation visualization filters search)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(rgselect_unique rgselect_unique.cpp)
target_link_libraries(rgselect_unique ${PCL_LIBRARIES})
